--- a/index.html
+++ b/index.html
@@ -192,6 +192,10 @@
     </div>
   </div>
   <script src="js/script.js"></script>
+  <script id="template-article-link" type="text/x-handlebars-template">
+    <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
 </body>
 
 </html>
