--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
   </script>
   <script id="template-tag-link" type="text/x-handlebars-template">
-    <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
+    <li><a href="#tag-{{ id }}"><span>{{ title }}</span></a></li>
   </script>
   <script id="template-author-link" type="text/x-handlebars-template">
     <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
