--- a/index.html
+++ b/index.html
@@ -251,7 +251,12 @@
   </script>
   <script id="template-tag-cloud-link" type="text/x-handlebars-template">
     {{#each tags}}
-    <li><a href="#tag-{{ tag }}"" class="{{ className }}">{{ tag }}</a></li>
+    <li><a href="#tag-{{ tag }}" class="{{ className }}">{{ tag }}</a></li>
+    {{/each}}
+  </script>
+  <script id="template-author-list" type="text/x-handlebars-template">
+    {{#each authors}}
+    <li><a href="#author-{{ author }}">{{ author }}</a> ({{ count }})</li>
     {{/each}}
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
